# Smart-Garbage-Chute

./: .env  .env.example  .gitignore  DEPLOYMENT.md  MOBILE_APP.md  PROJECT_COMPLETION_REPORT.md  QUICK_START.md  README.md  SYSTEM_COMPLETION_REPORT.md
.github/workflows/: ci-cd.yml  ci.yml
ai-service/: Dockerfile  pyproject.toml
ai-service/app/: main.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/core/: config.py  rbac.py  security.py
backend/app/db/: session.py
backend/app/services/: alert_engine.py  analytics_service.py  audit_service.py  broadcaster.py  dashboard_service.py  demo_data.py  mqtt_service.py  notification_service.py  ota_service.py  simulation_service.py
docs/: api.md  architecture.md  deployment.md  original-diagram.drawio
firmware/: README.md  platformio.ini
firmware/main/: main.cpp
frontend/: .env.local  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.jsx  page.jsx  page.jsx.bak
frontend/app/admin/: page.jsx
frontend/app/components/: auth-form.jsx  portal-shell.jsx  session.js
infrastructure/: Dockerfile.backend  docker-compose.yml
infrastructure/monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
infrastructure/nginx/: nginx.conf
mobile/: README.md  pubspec.yaml
mobile/ios/: Podfile
mobile/lib/: main.dart
mobile/test/: smoke_test.dart
shared/contracts/: telemetry.schema.json
(+40 files in other folders)
