[project]
name = "smart-garbage-ai-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "opencv-python-headless>=4.10.0",
  "numpy>=1.26.4",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "structlog>=24.1.0",
  "pillow>=10.2.0",
]

# Optional: Uncomment for YOLOv8 support
# torch>=2.0.0
# torchvision>=0.15.0
# ultralytics>=8.0.0
